--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marketplace",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.cjs",
   "type": "module",
   "scripts": {
     "backend": "nodemon backend/index.js",
